# resume_site

./: .gitignore  MANIFEST.ini  Makefile  Procfile  README.md  RECOVERY_LOG.md  app.py  config.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  wsgi.py
resume_site/: __init__.py  models.py  routes.py  test_npi_endpoint.py  utils.py
resume_site/templates/: 403.html  404.html  500.html  README.md  base.html  books.html  email_requests.html  index.html  references.html  resume.html
resume_site/templates/_drafts/: laws_of_form_research.html  programming_reflections.html
resume_site/templates/components/: __job_entry.html  education_entry.html  job_entry.html  request_form.html
scripts/: dev_db.py
static/: style.css
static/files/: Resume.v3.4.docx
tests/: __init__.py  conftest.py  test_;ogging.py  test_email.py  test_smoke.py  test_utils.py
